feat(nord): add recommended information to header comment
Signed-off-by: jdev082 <jdev082@jdev.eu.org>

--- a/nord.css
+++ b/nord.css
@@ -1,4 +1,8 @@
-/* Nord theme */
+/* 
+`   Nord Theme v1 by jdev082
+    Complies with CTS v1
+    Colors from https://www.nordtheme.com/
+*/
 
 :root {
     --primary: #4c566a;
