fix(nord): fix formatting)

--- a/nord.css
+++ b/nord.css
@@ -10,8 +10,7 @@
     --tertiary: #3b4252;
     --userchrome-btn-primary: var(--primary);
     --userchrome-btn-secondary: var(--secondary);
-    --button-primary: #88c0d0
-    ;
+    --button-primary: #88c0d0;
     --button-secondary: #81a1c1;
     --button-tertiary: #5e81ac;
     --foreground: #d8dee9;
