fix(nord): adapt to v3.10 bug fix
Signed-off-by: jdev082 <jdev082@jdev.eu.org>

--- a/nord.css
+++ b/nord.css
@@ -1,6 +1,6 @@
 /* 
-`   Nord Theme v1 by jdev082
-    Complies with CTS v1
+`   Nord Theme v1.1 by jdev082
+    Complies with CTS v1.1
     Colors from https://www.nordtheme.com/
 */
 
@@ -9,10 +9,13 @@
     --secondary: #434c5e;
     --tertiary: #3b4252;
     --userchrome-background-color: var(--primary);
-    /* --userchrome-background: url('nord.jpg'); */
+    --userchrome-background: url('./nord.jpg');
+    /* --home-background: url('./nord.jpg'); */
+    --userchrome-background-position-x: center;
+    --userchrome-background-position-y: center;
     --userchrome-btn-primary: var(--primary);
     --userchrome-btn-secondary: var(--secondary);
-    /* --home-background: url('nord.jpg'); */
+    /* --home-background: url('./nord.jpg'); */
     --button-primary: #88c0d0;
     --button-secondary: #81a1c1;
     --button-tertiary: #5e81ac;
